workx-rs/tui/src/bottom_pane/snapshots/workx_tui__bottom_pane__status_line_setup__tests__setup_view_snapshot_uses_runtime_preview_values.snap
---
source: tui/src/bottom_pane/status_line_setup.rs
expression: "render_lines(&view, 72)"
---
                                                                        
  Configure Status Line                                                 
  Select which items to display in the status line.                     
                                                                        
  Type to search                                                        
  >                                                                     
› [x] Use theme colors      Apply colors from the active /theme         
  ───────────────────────                                               
  [x] model                 Current model name                          
  [x] current-dir           Current working directory                   
  [x] git-branch            Current Git branch (omitted when unavaila…  
  [ ] model-with-reasoning  Current model name with reasoning level     
  [ ] reasoning             Current reasoning level                     
  [ ] project-name          Project name (omitted when unavailable)     
                                                                        
  gpt-5-codex · ~/workx-rs · jif/statusline-preview                     
  Press space to toggle; ←/→ to move; enter to confirm and close; esc to
